--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,13 +6,32 @@
             <time class="date">
                 {{ post.published_date }}
             </time>
+        {% else %}
+            <form method="POST" action="{% url 'post_publish' pk=post.pk %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">Publish</button>
+            </form>
         {% endif %}
+        
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
         
-        
         <aside class="actions">
             <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
+            <form method="POST" action="{% url 'post_remove' pk=post.pk %}" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
         </aside>
     </article>
+    
+    <hr>
+    <section class="comments">
+        <h3>Comments</h3>
+        {% for comment in post.comments.all %}
+            <p><strong>{{ comment.author }}</strong>: {{ comment.text }}</p>
+        {% empty %}
+            <p>No comments yet.</p>
+        {% endfor %}
+    </section>
 {% endblock %}
